Avances en el punto 2

--- a/Taller/resources/css/app.css
+++ b/Taller/resources/css/app.css
@@ -10,3 +10,19 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+
+.productos {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2em;
+    & .producto{
+      display: flex; 
+      flex-direction: column;
+      width: 215px;
+      & img{
+        height: 215px;
+        object-fit: contain;
+      }
+    }
+  }
