--- a/Taller/public/css/app.css
+++ b/Taller/public/css/app.css
@@ -210,3 +210,13 @@ td {
   text-align: center;
   margin-top: 1em;
 }
+.filtrar-productos{
+  margin-bottom: 10px;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  & select{
+    margin-left: 8px;
+    padding: 0.5em;
+  }
+}
