--- a/Taller/public/css/app.css
+++ b/Taller/public/css/app.css
@@ -145,7 +145,7 @@ header nav{
     }
   }
 }
-.producto_nuevo, .editar_producto, .articulo_nuevo, .editar_articulo{
+.producto_nuevo, .editar_producto, .articulo_nuevo, .editar_articulo,  .editar_comentario{
   display: flex; 
   padding: 6px;
   border: 2px solid gray;
